[package]
name = "envoption"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@danielimfeld.com>"]
license = "MIT OR Apache-2.0"
description = "Simple functions for parsing environment variables when reading config"
repository = "https://github.com/dimfeld/rust-envoption"
readme = "README.md"
keywords = ["env"]

[dependencies]
