[package]
name = "envoption"
version = "0.2.1"
authors = ["Daniel Imfeld <daniel@danielimfeld.com>"]
license = "MIT OR Apache-2.0"
description = "Functions for parsing environment variables with support for required, optional, and default values"
repository = "https://github.com/dimfeld/rust-envoption"
documentation = "https://docs.rs/envoption"
readme = "README.md"
keywords = ["env"]

[dependencies]
